--- a/index.html
+++ b/index.html
@@ -1,22 +1,212 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>My One-Page Website</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Dr. Benjamin Reinstein – Emergency Dental Care Jerusalem</title>
+
   <style>
     body {
-      font-family: Arial;
-      margin: 40px auto;
-      max-width: 700px;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
       line-height: 1.6;
+      color: #333;
     }
-    h1 { color: #333; }
-  </style>
-</head>
-<body>
 
-  <h1>Hello!</h1>
-  <p>This is my one-page website hosted on GitHub Pages.</p>
+    header {
+      background: #0aa2ff;
+      color: white;
+      text-align: center;
+      padding: 40px 20px;
+    }
+
+    h1 { margin: 0; font-size: 2.4rem; }
+    h2 { margin-top: 0; }
+
+    section {
+      padding: 40px 20px;
+      max-width: 900px;
+      margin: auto;
+    }
+
+    .services {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+    }
+
+    .service-box {
+      background: #f7f7f7;
+      padding: 20px;
+      border-radius: 10px;
+      text-align: center;
+      box-shadow: 0 0 10px rgba(0,0,0,0.05);
+    }
+
+    .button {
+      background: #003cff;
+      color: white;
+      padding: 10px 16px;
+      text-decoration: none;
+      border-radius: 8px;
+      display: inline-block;
+      margin: 10px 5px;
+    }
+
+    .lang-toggle {
+      margin-top: 20px;
+    }
+
+    #hebrew, #english, #french {
+      display: none;
+    }
+
+    /* Hebrew RTL */
+    #hebrew {
+      direction: rtl;
+      text-align: right;
+    }
+
+    footer {
+      background: #111;
+      color: white;
+      text-align: center;
+      padding: 20px;
+      margin-top: 40px;
+    }
+
+    iframe {
+      width: 100%;
+      height: 350px;
+      border: 0;
+      border-radius: 10px;
+      margin-top: 20px;
+    }
+  </style>
+
+  <script>
+    function showLang(lang) {
+      document.getElementById("english").style.display = (lang === 'en') ? 'block' : 'none';
+      document.getElementById("hebrew").style.display = (lang === 'he') ? 'block' : 'none';
+      document.getElementById("french").style.display = (lang === 'fr') ? 'block' : 'none';
+    }
+  </script>
+</head>
+
+<body onload="showLang('en')">
+
+<header>
+  <h1 id="main-title">Dr. Benjamin Reinstein</h1>
+  <p>Emergency Dental Care – Jerusalem</p>
+
+  <div class="lang-toggle">
+    <a href="#" class="button" onclick="document.getElementById('main-title').innerText='Dr. Benjamin Reinstein'; showLang('en')">English</a>
+    <a href="#" class="button" onclick="document.getElementById('main-title').innerText='ד״ר בנימין ריינשטיין'; showLang('he')">עברית</a>
+    <a href="#" class="button" onclick="document.getElementById('main-title').innerText='Dr Benjamin Reinstein'; showLang('fr')">Français</a>
+  </div>
+</header>
+
+<!-- ========================= -->
+<!-- ENGLISH SECTION           -->
+<!-- ========================= -->
+<section id="english">
+  <h2>About the Clinic</h2>
+  <p>
+    Dr. Benjamin Reinstein provides professional and gentle emergency dental care 
+    in Jerusalem. Immediate treatment is available for dental pain, trauma, swelling, 
+    and oral bleeding.
+  </p>
+
+  <h2>Emergency Dental Services</h2>
+
+  <div class="services">
+    <div class="service-box"><h3>Tooth Pain</h3><p>Urgent treatment for severe or sudden dental pain.</p></div>
+    <div class="service-box"><h3>Broken / Knocked-Out Tooth</h3><p>Immediate care after dental trauma.</p></div>
+    <div class="service-box"><h3>Swelling</h3><p>Treatment for infections and acute swelling.</p></div>
+    <div class="service-box"><h3>Bleeding</h3><p>Control and treatment of oral bleeding.</p></div>
+    <div class="service-box"><h3>Oral Cuts</h3><p>Soft-tissue injury treatment.</p></div>
+  </div>
+
+  <h2>Contact</h2>
+  <p><strong>Phone:</strong> <a href="tel:+972500000000">050-000-0000</a></p>
+  <p><strong>Email:</strong> <a href="mailto:clinic@example.com">clinic@example.com</a></p>
+
+  <h2>Location</h2>
+  <iframe  
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3382.2462189174803!2d35.215!3d31.778!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzHCsDQ2JzQwLjgiTiAzNcKwMTInNTQuMCJF!5e0!3m2!1sen!2sil!4v1234567890"
+    allowfullscreen=""
+    loading="lazy">
+  </iframe>
+</section>
+
+<!-- ========================= -->
+<!-- HEBREW SECTION (RTL)      -->
+<!-- ========================= -->
+<section id="hebrew">
+  <h2>על המרפאה</h2>
+  <p>
+    ד״ר בנימין ריינשטיין מספק טיפול חירום מקצועי ועדין בירושלים.
+    מעניק טיפול מיידי לכאבי שיניים, שברים, נפיחות ודימומים בחלל הפה.
+  </p>
+
+  <h2>שירותי חירום</h2>
+
+  <div class="services">
+    <div class="service-box"><h3>כאבי שיניים</h3><p>טיפול מיידי בכאב חד או מתמשך.</p></div>
+    <div class="service-box"><h3>שבר או נפילת שן</h3><p>טיפול לאחר חבלה או טראומה.</p></div>
+    <div class="service-box"><h3>נפיחות</h3><p>טיפול בזיהומים חריפים ונפיחות.</p></div>
+    <div class="service-box"><h3>דימומים</h3><p>עצירת דימום וטיפול דחוף.</p></div>
+    <div class="service-box"><h3>חתכים אורליים</h3><p>טיפול בפציעות רקמות רכות.</p></div>
+  </div>
+
+  <h2>צור קשר</h2>
+  <p><strong>טלפון:</strong> <a href="tel:+972500000000">050-000-0000</a></p>
+  <p><strong>אימייל:</strong> <a href="mailto:clinic@example.com">clinic@example.com</a></p>
+
+  <h2>מיקום</h2>
+  <iframe  
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3382.2462189174803!2d35.215!3d31.778!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzHCsDQ2JzQwLjgiTiAzNcKwMTInNTQuMCJF!5e0!3m2!1she!2sil!4v1234567890"
+    allowfullscreen=""
+    loading="lazy">
+  </iframe>
+</section>
+
+<!-- ========================= -->
+<!-- FRENCH SECTION            -->
+<!-- ========================= -->
+<section id="french">
+  <h2>À propos de la clinique</h2>
+  <p>
+    Le Dr Benjamin Reinstein offre des soins dentaires d'urgence professionnels et doux à Jérusalem.
+    Traitement immédiat pour les douleurs dentaires, les traumatismes, les gonflements et les saignements.
+  </p>
+
+  <h2>Services d'urgence dentaire</h2>
+
+  <div class="services">
+    <div class="service-box"><h3>Douleurs dentaires</h3><p>Traitement urgent en cas de douleur intense.</p></div>
+    <div class="service-box"><h3>Dents cassées ou expulsées</h3><p>Soins immédiats après un traumatisme.</p></div>
+    <div class="service-box"><h3>Gonflement</h3><p>Traitement des infections et inflammations aigües.</p></div>
+    <div class="service-box"><h3>Saignements</h3><p>Contrôle et traitement des saignements buccaux.</p></div>
+    <div class="service-box"><h3>Coupures orales</h3><p>Traitement des blessures des tissus mous.</p></div>
+  </div>
+
+  <h2>Contact</h2>
+  <p><strong>Téléphone:</strong> <a href="tel:+972500000000">050-000-0000</a></p>
+  <p><strong>Email:</strong> <a href="mailto:clinic@example.com">clinic@example.com</a></p>
+
+  <h2>Localisation</h2>
+  <iframe  
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3382.2462189174803!2d35.215!3d31.778!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzHCsDQ2JzQwLjgiTiAzNcKwMTInNTQuMCJF!5e0!3m2!1sfr!2sil!4v1234567890"
+    allowfullscreen=""
+    loading="lazy">
+  </iframe>
+</section>
+
+<footer>
+  <p>© 2025 Dr. Benjamin Reinstein</p>
+</footer>
 
 </body>
 </html>
