Fix typo in French subtitle in index.html
test commit

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ const content = {
   fr: {
     direction: "ltr",
     title: "Dr Benjamin Reinstein",
-    subtitle: "Soins dentaires d’urgence – Jérusalem",
+    subtitle: "Soin dentaires d’urgence – Jérusalem",
     aboutTitle: "À propos",
     aboutText: "Soins dentaires d'urgence professionnels.",
     servicesTitle: "Services d'urgence",
