Update clinic information and service descriptions

--- a/index.html
+++ b/index.html
@@ -208,14 +208,14 @@ const content = {
     direction: "rtl",
     title: "ד״ר בנימין ריינשטיין",
     subtitle: "טיפול שיניים חירום – ירושלים",
-    aboutTitle: "על המרפאה",
-    aboutText: "ד״ר בנימין ריינשטיין מעניק טיפול חירום מקצועי בירושלים.",
+    aboutTitle: "טיפולים איכותיים בירושלים",
+    aboutText: "ד״ר בנימין ריינשטיין מספק טיפולי שיניים דחופים המותאמים לצריכים שלכם בשעות הערב ובסופי השבוע.",
     servicesTitle: "שירותי חירום",
     services: [
-      { title: "כאבי שיניים", desc: "טיפול מיידי." },
-      { title: "שן שבורה", desc: "טיפול לאחר טראומה." },
-      { title: "נפיחות", desc: "טיפול בזיהומים." },
-      { title: "דימומים", desc: "עצירת דימום." }
+      { title: "כאבי שיניים", desc: "טיפול מיידי בכאב חד או מתמשך." },
+      { title: "שבר או נפילת שן", desc: "טיפול לאחר חבלה או טראומה דנטלי." },
+      { title: "נפיחות", desc: "טיפול בזיהומים חריפים ונפיחויות." },
+      { title: "דימומים וחתכים אוראליים", desc: "טיפול בפציעות רקמות רכות." }
     ],
     contactTitle: "צור קשר",
     phoneLabel: "טלפון:",
@@ -229,14 +229,14 @@ const content = {
     direction: "ltr",
     title: "Dr. Benjamin Reinstein",
     subtitle: "Emergency Dental Care – Jerusalem",
-    aboutTitle: "About the Clinic",
-    aboutText: "Professional emergency dental care in Jerusalem.",
+    aboutTitle: "Quality Care in Jerusalem",
+    aboutText: "Dr. Benjamin Reinstein provides emergency dental care tailored to your needs in the evenings and on weekends.",
     servicesTitle: "Emergency Services",
     services: [
-      { title: "Tooth Pain", desc: "Treatment for severe pain." },
-      { title: "Broken Tooth", desc: "Immediate trauma care." },
-      { title: "Swelling", desc: "Infection treatment." },
-      { title: "Bleeding", desc: "Bleeding control." }
+      { title: "Tooth Pain", desc: "Urgent treatment for severe or sudden dental pain." },
+      { title: "Broken / Knocked-Out Tooth", desc: "Immediate care after dental trauma." },
+      { title: "Swelling", desc: "Treatment for infections and acute swelling." },
+      { title: "Bleeding and Oral Cuts", desc: "Soft-tissue injury treatment." }
     ],
     contactTitle: "Contact",
     phoneLabel: "Phone:",
@@ -250,14 +250,14 @@ const content = {
     direction: "ltr",
     title: "Dr Benjamin Reinstein",
     subtitle: "Soin dentaires d’urgence – Jérusalem",
-    aboutTitle: "À propos",
-    aboutText: "Soins dentaires d'urgence professionnels.",
+    aboutTitle: "Soins de qualité à Jérusalem",
+    aboutText: "Le Dr Benjamin Reinstein propose des soins dentaires d'urgence adaptés à vos besoins, en soirée et en fin de semaine.",
     servicesTitle: "Services d'urgence",
     services: [
-      { title: "Douleurs dentaires", desc: "Traitement urgent." },
-      { title: "Dents cassées", desc: "Intervention immédiate." },
-      { title: "Gonflement", desc: "Traitement des infections." },
-      { title: "Saignements", desc: "Contrôle du saignement." }
+      { title: "Douleurs dentaires", desc: "Traitement urgent en cas de douleur intense." },
+      { title: "Dents cassées ou expulsées", desc: "Soins immédiats après un traumatisme dentaire." },
+      { title: "Gonflement", desc: "Traitement des infections et inflammations aigües." },
+      { title: "Saignements et Coupures", desc: "Traitement des blessures des tissus oraux." }
     ],
     contactTitle: "Contact",
     phoneLabel: "Téléphone:",
