--- a/index.html
+++ b/index.html
@@ -136,6 +136,32 @@ body.rtl {
   direction: rtl;
   text-align: right;
 }
+
+/* ===========================
+   FLOATING WHATSAPP BUTTON
+   =========================== */
+
+.whatsapp-float {
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  width: 65px;
+  height: 65px;
+  z-index: 9999;
+}
+
+.whatsapp-float img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+  transition: transform 0.2s ease;
+}
+
+.whatsapp-float:hover img {
+  transform: scale(1.1);
+}
+
 </style>
 </head>
 
@@ -184,6 +210,13 @@ body.rtl {
 <footer style="background:#111;color:white;text-align:center;padding:20px;">
   <span id="footer-text"></span>
 </footer>
+
+<!-- ===========================
+     FLOATING WHATSAPP BUTTON
+     =========================== -->
+<a href="https://wa.me/972542349043" class="whatsapp-float" target="_blank" rel="noopener">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
+</a>
 
 <script>
 /* toggle */
