--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ body.rtl {
 .whatsapp-float {
   position: fixed;
   bottom: 20px;
-  left: 20px;
+  right: 20px;
   width: 65px;
   height: 65px;
   z-index: 9999;
