Update contact email address in index.html

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ body.rtl {
 
   <h2 id="contact-title"></h2>
   <p><strong id="phone-label"></strong> 053-385-2030</p>
-  <p><strong id="email-label"></strong> clinic@example.com</p>
+  <p><strong id="email-label"></strong> BenjaminReinstein@gmail.com</p>
 
   <h2 id="location-title"></h2>
   <iframe id="map-frame" width="100%" height="350" style="border:0;border-radius:14px;" loading="lazy"></iframe>
