Fix typo in footer text

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ const content = {
     phoneLabel: "Téléphone:",
     emailLabel: "Email:",
     locationTitle: "Localisation",
-    footer: "© 2025 Dr Benjaminn Reinstein",
+    footer: "© 2025 Dr Benjamin Reinstein",
     map: MAP_URL
   }
 };
