Update emergency clinic introduction text

--- a/index.html
+++ b/index.html
@@ -290,8 +290,8 @@ const content = {
     subtitle: "טיפול שיניים חירום – ירושלים",
     tabEmergencies: "עזרה ראשונה",
     tabAbout: "אודות המרפאה",
-    emergencyIntroTitle: "מרפאת חירום זמינה עבורך",
-    emergencyIntroText: "כאב שיניים אינו מחכה לשעות העבודה הרגילות. אנו כאן כדי לספק מענה מקצועי ומהיר לכל מקרה דחוף, בשעות הערב ובימי שישי ושבת.",
+    emergencyIntroTitle: "המרפאה זמינה עבורך",
+    emergencyIntroText: "כאב שיניים אינו מחכה לשעות העבודה הרגילות. אנו כאן, עם ניסיון רב בטיפולי חירום דנטליים, כדי לספק מענה מקצועי ומהיר לכל מקרה דחוף בשעות הערב ובסופי השבוע.",
     clinicTitle: "אודות המרפאה שלנו",
     clinicText: "מרפאתו של ד״ר ריינשטיין מציעה טיפולי שיניים מתקדמים באווירה רגועה ומקצועית במרכז ירושלים.",
     servicesTitle: "שירותי חירום",
