Update subtitles and emergency text in multiple languages

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ const content = {
   he: {
     direction: "rtl",
     title: "ד״ר בנימין ריינשטיין",
-    subtitle: "טיפול שיניים חירום – ירושלים",
+    subtitle: "טיפול שיניים בירושלים",
     tabEmergencies: "עזרה ראשונה",
     tabAbout: "אודות המרפאה",
     emergencyIntroTitle: "המרפאה זמינה עבורך",
@@ -312,11 +312,11 @@ const content = {
   en: {
     direction: "ltr",
     title: "Dr. Benjamin Reinstein",
-    subtitle: "Emergency Dental Care – Jerusalem",
+    subtitle: "Dental Care in Jerusalem",
     tabEmergencies: "Dental Emergencies",
     tabAbout: "About Our Clinic",
     emergencyIntroTitle: "Urgent Care When You Need It",
-    emergencyIntroText: "Dental emergencies don't stick to office hours. We are dedicated to providing fast, professional relief for urgent cases during evenings and weekends.",
+    emergencyIntroText: "Dental emergencies don't stick to office hours. With extensive experience in emergency dental care, we are here to provide a professional and rapid response to any urgent case during evenings and weekends.",
     clinicTitle: "About Our Clinic",
     clinicText: "Dr. Benjamin Reinstein provides high-quality care with a focus on patient comfort. Our clinic is equipped with modern technology to handle urgent cases efficiently.",
     servicesTitle: "Emergency Services",
@@ -337,11 +337,11 @@ const content = {
   fr: {
     direction: "ltr",
     title: "Dr Benjamin Reinstein",
-    subtitle: "Soin dentaires d’urgence – Jérusalem",
+    subtitle: "Soins dentaires à Jérusalem",
     tabEmergencies: "Urgences Dentaires",
     tabAbout: "À Propos de la Clinique",
     emergencyIntroTitle: "Des soins urgents quand vous en avez besoin",
-    emergencyIntroText: "Les urgences dentaires ne respectent pas les horaires de bureau. Nous nous engageons à fournir un soulagement rapide et professionnel pour les cas urgents en soirée et le week-end.",
+    emergencyIntroText: "Une rage de dents n’attend pas les horaires de bureau. Grace à notre expérience en soins dentaires d'urgence, nous sommes là pour offrir une intervention rapide et professionnelle en soirée et le week-end.",
     clinicTitle: "À Propos de Notre Clinique",
     clinicText: "Le Dr Benjamin Reinstein offre des soins de haute qualité en mettant l'accent sur le confort du patient. Notre clinique est équipée d'une technologie moderne.",
     servicesTitle: "Services d'urgence",
